<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        style="?attr/toolbarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/mainBackButton"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_back"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MainTitle"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"/>

        <ImageButton
            android:id="@+id/myButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_person"
            android:background="@android:color/transparent"
            android:layout_marginEnd="20dp" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/toolBar"/>

    <TextView
        android:id="@+id/koreanStudy"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_gray"
        android:gravity="end|center"
        android:padding="20dp"
        android:text="@string/korean"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:drawableLeftCompat="@drawable/hangul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolBar" />

    <TextView
        android:id="@+id/englishButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/koreanStudy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_gray"
        android:text="@string/english"
        android:gravity="end|center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:padding="20dp"
        app:drawableLeftCompat="@drawable/english" />

    <TextView
        android:id="@+id/mathButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/englishButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_gray"
        android:text="@string/math"
        android:gravity="end|center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:padding="20dp"
        app:drawableLeftCompat="@drawable/math" />

</androidx.constraintlayout.widget.ConstraintLayout>