<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        style="?attr/toolbarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/englishBackButton"
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_back"
            android:layout_marginStart="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/englishStudyTitle"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </androidx.appcompat.widget.Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/toolBar"/>

    <TextView
        android:id="@+id/englishStudy"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_gray"
        android:text="@string/englishStudy"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:padding="20dp" />

    <TextView
        android:id="@+id/englishExam"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/englishStudy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape_gray"
        android:text="@string/koreanExam"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:padding="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>